Stop overflow from happening in the display

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,7 @@ main {
   font-size: 40px;
 
   margin-bottom: 5px;
+  overflow: auto;
 }
 
 .numpad {
